WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
35975
REGRESSION: Crash in WebKitPluginHost due to Flash plugin
https://bugs.webkit.org/show_bug.cgi?id=35975
Summary
REGRESSION: Crash in WebKitPluginHost due to Flash plugin
Dimitris Apostolou
Reported
2010-03-10 09:48:15 PST
Created
attachment 50411
[details]
Crash log
r55772
Reproducibility: always Steps: Open any page that includes Flash. What happened: Crash in WebKitPluginHost due to Flash plugin. Expected result: WebKitPluginHost does not crash.
Attachments
Crash log
(31.57 KB, text/plain)
2010-03-10 09:48 PST
,
Dimitris Apostolou
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
John H. VanOphem
Comment 1
2010-03-10 11:53:49 PST
Happening to me as well. Uninstalled and re-installed Flash also.
Mark Rowe (bdash)
Comment 2
2010-03-10 15:17:16 PST
<
rdar://problem/7740157
>
Simon Fraser (smfr)
Comment 3
2010-03-10 16:21:26 PST
<
rdar://problem/7739922
> I think this only happens if you have the Flash 10.1 beta installed.
John H. VanOphem
Comment 4
2010-03-10 16:40:41 PST
Yes, I have the latest beta installed
Simon Fraser (smfr)
Comment 5
2010-03-10 18:19:49 PST
http://trac.webkit.org/changeset/55824
Dimitris Apostolou
Comment 6
2010-03-11 06:16:26 PST
Verified with
r55834
. Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug