WebKit/mac/Plugins/WebBaseNetscapePluginView.h
@@ -124,6 +124,7 @@ class WebHaltablePlugin;
 - (void)removeWindowObservers;
 - (BOOL)shouldClipOutPlugin;
 - (BOOL)inFlatteningPaint;
+- (BOOL)supportsSnapshotting;
 
 - (BOOL)convertFromX:(double)sourceX andY:(double)sourceY space:(NPCoordinateSpace)sourceSpace
                  toX:(double *)destX andY:(double *)destY space:(NPCoordinateSpace)destSpace;
